--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,11 +1,8 @@
-1. Header ka background-color
-2. Header ke andar jo login likha hai uska color/font
-3. Login /Register ka bgcolor
-4. ColorDetection ki css adjust according to background
+1. Login /Register ka bgcolor
+2. ColorDetection ki css adjust according to background
+3. Add more colors to background
 
-5. LoginPop banana hai shayad
-6. Background component using particle and stopwatch jaisa bg
-https://stackoverflow.com/questions/44752138/in-react-how-to-pass-a-dynamic-variable-to-a-const-css-style-list
+4. LoginPop banana hai shayad
 
 -------------------------------------------
 Lalit (4-9-2019)
