Added Login Menu

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,6 +1,11 @@
 1. Login /Register ka bgcolor
-2. ColorDetection ki css adjust according to background   --> Probablu Done
 
+2. Create Homepage
+3. Create LoginMenu Component..(after user login)
+
+... Send color2(black/white through background)
+... Delete Slider folder (wait)
+... Delete Not Required Images
 ... LoginPop banana hai shayad
 
 -------------------------------------------
