--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,10 +1,9 @@
 1. Login /Register ki validations
 
-2. Create Homepage
+2. Create HomeTile Component
 3. Create LoginMenu Component..(after user login)
 
 ... Send color2(black/white through background)...?
-... Delete Slider folder (wait)
 ... Delete Not Required Images
 ... LoginPop banana hai shayad
 
