--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,5 +1,22 @@
-2. Send Request to backend whenever we detect
-3. Create LoginMenu Component..(after user login)
+OVERALL
+
+1. Send Request to backend whenever we detect
+2. Make a hover notification component to give messages like registration failed, successful, etc
+3. Face detection ki ek image work nahi kar rahi
 
 -------------------------------------------
 Lalit (4-9-2019)
+----------------------------------------------
+19-03-2020
+
+1)	Home page theek karna hai.
+2)	user ka name aur login button add karna hai.
+3)	loading ke liye kuch karna hai.
+4)	login menu and profile page.
+	
+----------------------------------------------
+
+23-03-2020
+1)  Register, Login ka error bina component banaye dikha sakte hai
+2)  use Google Drive API
+3)  loginmenu me image warning de rahi hai
